[gd_scene load_steps=86 format=2]

[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_00_delay-0.08s.png" type="Texture" id=1]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_01_delay-0.08s.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_04_delay-0.08s.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_02_delay-0.08s.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_03_delay-0.08s.png" type="Texture" id=5]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_05_delay-0.08s.png" type="Texture" id=6]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_06_delay-0.08s.png" type="Texture" id=7]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_10_delay-0.08s.png" type="Texture" id=8]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_08_delay-0.08s.png" type="Texture" id=9]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_07_delay-0.08s.png" type="Texture" id=10]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_11_delay-0.08s-ConvertImage.png" type="Texture" id=11]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_09_delay-0.08s.png" type="Texture" id=12]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_27_delay-0.08s.png" type="Texture" id=13]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_15_delay-0.08s-ConvertImage.png" type="Texture" id=14]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_20_delay-0.08s-ConvertImage.png" type="Texture" id=15]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_23_delay-0.08s-ConvertImage.png" type="Texture" id=16]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_17_delay-0.08s-ConvertImage.png" type="Texture" id=17]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_31_delay-0.08s.png" type="Texture" id=18]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_12_delay-0.08s-ConvertImage.png" type="Texture" id=19]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_14_delay-0.08s-ConvertImage.png" type="Texture" id=20]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_28_delay-0.08s.png" type="Texture" id=21]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_30_delay-0.08s.png" type="Texture" id=22]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_16_delay-0.08s-ConvertImage.png" type="Texture" id=23]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_18_delay-0.08s-ConvertImage.png" type="Texture" id=24]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_19_delay-0.08s-ConvertImage.png" type="Texture" id=25]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_21_delay-0.08s-ConvertImage.png" type="Texture" id=26]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_22_delay-0.08s-ConvertImage.png" type="Texture" id=27]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_13_delay-0.08s-ConvertImage.png" type="Texture" id=28]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_25_delay-0.08s.png" type="Texture" id=29]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_26_delay-0.08s.png" type="Texture" id=30]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_29_delay-0.08s.png" type="Texture" id=31]
[ext_resource path="res://Ressources/Sprites/monstLas/Idle/frame_24_delay-0.08s.png" type="Texture" id=32]
[ext_resource path="res://Scenes/Perso/MonsterBall.gd" type="Script" id=33]
[ext_resource path="res://Ressources/Sprites/Explosion_2.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Objects/shoot_enemy.tscn" type="PackedScene" id=35]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre1.png" type="Texture" id=36]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre2.png" type="Texture" id=37]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile008.png" type="Texture" id=38]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre4.png" type="Texture" id=39]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre6.png" type="Texture" id=40]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile002.png" type="Texture" id=41]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile004.png" type="Texture" id=42]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile005.png" type="Texture" id=43]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile003.png" type="Texture" id=44]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile000.png" type="Texture" id=45]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile001.png" type="Texture" id=46]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile006.png" type="Texture" id=47]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile010.png" type="Texture" id=48]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre19.png" type="Texture" id=49]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre25.png" type="Texture" id=50]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre.png" type="Texture" id=51]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile009.png" type="Texture" id=52]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre9.png" type="Texture" id=53]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre8.png" type="Texture" id=54]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre11.png" type="Texture" id=55]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre10.png" type="Texture" id=56]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre12.png" type="Texture" id=57]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre13.png" type="Texture" id=58]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre3.png" type="Texture" id=59]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre5.png" type="Texture" id=60]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre7.png" type="Texture" id=61]
[ext_resource path="res://Ressources/Sprites/monstLas/die/tile007.png" type="Texture" id=62]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre22.png" type="Texture" id=63]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre23.png" type="Texture" id=64]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre15.png" type="Texture" id=65]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre20.png" type="Texture" id=66]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre14.png" type="Texture" id=67]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre18.png" type="Texture" id=68]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre16.png" type="Texture" id=69]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre17.png" type="Texture" id=70]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre24.png" type="Texture" id=71]
[ext_resource path="res://Ressources/Sprites/monstLas/hit/Sans titre21.png" type="Texture" id=72]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 34 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 34 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 34 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 34 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 34 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 34 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 34 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 34 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 34 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 34 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 34 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 34 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 15 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 16 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 31 ), ExtResource( 22 ), ExtResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 59 ), ExtResource( 39 ), ExtResource( 60 ), ExtResource( 40 ), ExtResource( 61 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 67 ), ExtResource( 65 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 68 ), ExtResource( 49 ), ExtResource( 66 ), ExtResource( 72 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 71 ), ExtResource( 50 ), ExtResource( 51 ) ],
"loop": true,
"name": "Hit",
"speed": 20.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 41 ), ExtResource( 44 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 47 ), ExtResource( 62 ), ExtResource( 38 ), ExtResource( 52 ), ExtResource( 48 ) ],
"loop": false,
"name": "die2",
"speed": 8.0
} ]

[node name="MonsterBall" type="KinematicBody2D"]
position = Vector2( 232, 104 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 33 )
__meta__ = {
"_edit_group_": true
}
bullet_scene = ExtResource( 35 )
bullet_spawn_path = NodePath("bullet_spawn")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "Idle"
frame = 16
playing = true

[node name="bullet_spawn" type="Position2D" parent="."]
position = Vector2( -240, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="collision" type="CollisionPolygon2D" parent="."]
position = Vector2( -154, -54 )
polygon = PoolVector2Array( 12, -10, 44, -58, 92, -74, 124, -90, 140, -138, 172, -154, 204, -154, 236, -154, 268, -154, 300, -138, 316, -122, 332, -106, 348, -74, 364, -42, 364, -10, 380, 38, 348, 70, 348, 102, 348, 150, 380, 198, 364, 246, 316, 262, 348, 230, 316, 198, 284, 230, 284, 262, 300, 278, 364, 278, 284, 294, 236, 278, 204, 294, 172, 294, 60, 278, 60, 294, 28, 278, -4, 278, -52, 294, -20, 262, -36, 262, -84, 278, -68, 246, -52, 246, -52, 214, -52, 182, -36, 134, -84, 102, -36, 118, -20, 102, -4, 22 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.9
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
